--- a/src/main/webapp/resources/css/main.css
+++ b/src/main/webapp/resources/css/main.css
@@ -3561,3 +3561,90 @@ ul.contact-info2 i.fa {
 	background-image:none;
 	background-clip:padding-box;
 }
+
+.data-list li, .inner-text {
+	font-size: 16px
+}
+
+.data-list {
+	margin: 0 0 10px;
+	list-style: none
+}
+
+.data-list li {
+	color: #000;
+	border-bottom: 1px solid #D2D2D2;
+	width: 50%;
+	float: left;
+	padding: 10px 0
+}
+
+@media ( max-width :600px) {
+	.data-list li {
+		width: 100%;
+		float: none
+	}
+}
+
+@media ( max-width :360px) {
+	.inner-text {
+		font-size: 14px
+	}
+}
+
+.data-list li b {
+	display: block;
+	color: #676767
+}
+
+.data-list li, .inner-text {
+	font-size: 16px
+}
+
+
+.tit-section {
+	font-size: 30px;
+	color: #304A6F
+}
+
+@media ( max-width :320px) {
+	.tit-section {
+		font-size: 25px
+	}
+}
+
+.apoyo li .box-txt h3, .tit-section {
+	font-weight: 700;
+	font-family: Oswald, sans-serif
+}
+
+.funda-txt h3, .name-pet {
+	text-transform: uppercase
+}
+
+.name-pet .btn {
+	border: 2px solid #FC9282;
+	float: right;
+	color: #FC9282;
+	font-family: "Trebuchet MS", Arial, Helvetica, sans-serif;
+	text-transform: none;
+	font-weight: 700
+}
+
+@media ( max-width :480px) {
+	.content-map {
+		height: 280px
+	}
+	.box-edit .btn {
+		font-size: 16px;
+		padding: 8px 10px;
+		width: 140px;
+		margin: 0 5px
+	}
+	.name-pet .btn {
+		float: none;
+		display: block;
+		width: 80px;
+		margin: 5px 0 0
+	}
+}
